adds paddings and margin for sections and containers

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </ul>
 </header>
 <main>
-   <section>
+   <section class="section portfolio">
     <div class="container">
     <h1 class="title">Наши работы</h1>
     <!-- Filters-buttons -->
