--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 </header>
 <main>
        <!-- Герой -->
-    <section class="hero">
+    <section class="hero section">
         <div class="container">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
         </div>
     </section>
     <!-- Наши преимущества -->
-    <section>
+    <section class="section section-features">
         <div class="container">
         <h2 class="title features">Преимущества</h2>
         <ul>
@@ -52,7 +52,7 @@
         </div>
     </section>
     <!-- Чем мы занимаемся -->
-    <section>
+    <section class="section">
         <div class="container">
         <h3 class="title cases">Чем мы занимаемся</h3>
         <ul>
@@ -63,7 +63,7 @@
         </div>
     </section>
     <!-- Наша команда -->
-    <section class="team">
+    <section class="team section">
         <div class="container">
         <h2 class="title team-title">Наша команда</h2>
         <ul>
