--- a/index.html
+++ b/index.html
@@ -29,25 +29,6 @@
     </ul>
     </div>
 </header>
-
-<!-- <header>
-    <div class="container page-header">
-    <nav class="main-nav">
-        <a class="logo" href="./index.html"><span class="part">Web</span>Studio</a></li>
-        <ul class="nav-list">
-            <li>
-            <li><a class="nav-item current" href="./index.html">Студия</a></li>
-            <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-            <li><a class=" nav-item" href="#">Контакты</a></li>
-        </ul>
-    </nav>
-    <ul>
-        <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-    </div>
-</header> -->
-
 <main>
        <!-- Герой -->
     <section class="hero section">
@@ -97,14 +78,16 @@
     </section>
 </main>
 <footer>
+    <div class="container page-footer">
     <a class="logo" href="./index.html"><span class="part">Web</span>Studio</a>
     <address>
         <p class="mail location">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
-            <li><a class="contact mail" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="contact mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="footer-contact"><a class="contact mail" href="mailto:info@example.com">info@example.com</a></li>
+            <li class="footer-contact"><a class="contact mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
+    </div>
 </footer>
 </body>
 </html>
