--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,20 @@
 </head>
 <body>
 <header>
-    <nav>
-        <a class="logo" href="./index.html"><span class="part">Web</span>Studio</a>
-        <ul>
-            <li><a class="navigate" href="./index.html">Студия</a></li>
-            <li><a class="navigate current" href="./portfolio.html">Портфолио</a></li>
-            <li><a class=" navigate" href="#">Контакты</a></li>
+    <div class="container page-header">
+        <nav>
+            <ul class="main-nav">
+                <li><a class="logo" href="./index.html"><span class="part">Web</span>Studio</a></li>
+                <li class="nav-item"><a class="nav-link current" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="nav-contact">
+            <li class="nav-contact-item"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="nav-contact-item"><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    <ul>
-        <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
+    </div>
 </header>
 <main>
    <section class="section portfolio">
@@ -92,14 +94,17 @@
    </section>
 </main>
 <footer>
-    <a class="logo" href="./index.html"><span class="part">Web</span>Studio</a>
-    <address>
-        <p class="mail location">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-            <li><a class="contact mail" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="contact mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-    </address>
+    <div class="container page-footer">
+        <a class="logo" href="./index.html"><span class="part">Web</span>Studio</a>
+        <address>
+            <p class="mail location">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li class="footer-contact"><a class="contact mail" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="footer-contact"><a class="contact mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+    </div>
 </footer>
 </body>
 </html>
