--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Наши преимущества -->
     <section class="section features">
         <div class="container">
-        <h2 class="title features-title">Преимущества</h2>
+        <h2 class="title features-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
             <li class="features-item"><h3 class="title features-item-title">Внимание к деталям</h3>
                 <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p> </li>
@@ -56,7 +56,7 @@
     <!-- Чем мы занимаемся -->
     <section class="section">
         <div class="container">
-        <h3 class="title cases-title">Чем мы занимаемся</h3>
+        <h2 class="title cases-title">Чем мы занимаемся</h2>
         <ul class="cases-list">
             <li><a href="#"><img class="picture" src="./images/box1-1.jpg" alt="Эффективное программирование" width="370"></a></li>
             <li><a href="#"><img class="picture" src="./images/box2-1.jpg" alt="Создание мобильных приложений" width="370"></a></li>
