--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
         <nav>
             <ul class="main-nav">
                 <li><a class="logo" href="./index.html"><span class="part">Web</span>Studio</a></li>
-                <li class="nav-item"><a class="nav-link current" href="./index.html">Студия</a></li>
-                <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link current" href="./portfolio.html">Портфолио</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
             </ul>
         </nav>
@@ -30,64 +30,100 @@
     </div>
 </header>
 <main>
-   <section class="section portfolio">
+   <section class="section">
     <div class="container">
-    <h1 class="title">Наши работы</h1>
+    <h1 class="title works-title visually-hidden">Наши работы</h1>
     <!-- Filters-buttons -->
-    <ul>
-     <li><button class="filter" type="button">Все</button></li>
-     <li><button class="filter" type="button">Веб-сайты</button></li>
-     <li><button class="filter" type="button">Приложения</button></li>
-     <li><button class="filter" type="button">Дизайн</button></li>
-     <li><button class="filter" type="button">Маркетинг</button></li>
+    <ul class="filter-list">
+     <li class="filter-item"><button class="filter-button" type="button">Все</button></li>
+     <li class="filter-item"><button class="filter-button" type="button">Веб-сайты</button></li>
+     <li class="filter-item"><button class="filter-button" type="button">Приложения</button></li>
+     <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
+     <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
      </ul>
 
-    <!-- Workes-card -->
-     <ul>
-        <li class="works-card">
-            <img src="./images/1-site.jpg" alt="Пример веб-страницы" width="370">
+    <!-- Works-card -->
+     <ul class="works-card-list">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/1-site.jpg" alt="Пример веб-страницы" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Технокряк</h2>
             <p class="works-card-text">Веб-сайт</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/2-poster.jpg" alt="Плакат баскетбольной лиги" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/2-poster.jpg" alt="Плакат баскетбольной лиги" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
             <p class="works-card-text">Дизайн</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/3-seafood.jpg" alt="Лого ресторана" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/3-seafood.jpg" alt="Лого ресторана" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Ресторан <span lang="en">Seafood</span> </h2>
             <p class="works-card-text">Приложение</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/4-prime.jpg" alt="Наушники" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/4-prime.jpg" alt="Наушники" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Проект <span lang="en">Prime</span></h2>
             <p class="works-card-text">Маркетинг</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/5-boxes.jpg" alt="Две коробки" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/5-boxes.jpg" alt="Две коробки" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Проект <span lang="en">Boxes</span> </h2>
             <p class="works-card-text">Приложение</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/6-inspiration.jpg" alt="Тёмная тема веб-страницы" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/6-inspiration.jpg" alt="Тёмная тема веб-страницы" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title" lang="en">Inspiration has no Borders</h2>
             <p class="works-card-text">Веб-сайт</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/7-limited.jpg" alt="Иллюстрации в книге" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/7-limited.jpg" alt="Иллюстрации в книге" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Издание <span lang="en">Limited Edition</span> </h2>
             <p class="works-card-text">Дизайн</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/8-lab.jpg" alt=" Ярлык LabElTag" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/8-lab.jpg" alt=" Ярлык LabElTag" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title">Проект <span lang="en"> LAB</span></h2>
             <p class="works-card-text">Маркетинг</p>
+            </div>
+            </div>
         </li>
-        <li class="works-card">
-            <img src="./images/9-growing.jpg" alt="Страница приложения на ноутбуке" width="370">
+        <li>
+            <div class="works-card">
+            <img class="picture" src="./images/9-growing.jpg" alt="Страница приложения на ноутбуке" width="370">
+            <div class="card-description">
             <h2 class="title works-card-title" lang="en">Growing Business</h2>
             <p class="works-card-text">Приложение</p>
+            </div>
+            </div>
         </li>
     </ul>
     </div>
